--- a/src/index.css
+++ b/src/index.css
@@ -1,149 +1,146 @@
 * {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    margin:0;
-    padding:0;
- }
- 
- @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
-    .backdrop-blur {
-      background-color: rgba(255, 255, 255, .5);
-      -webkit-backdrop-filter: blur(2em);
-      backdrop-filter: blur(2em);
-    }
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
- body {
-     background-color: beige;
-     margin: 0;
-     padding: 0;
- }
- 
- /* header */
- header {
-    position: absolute;
-    display: flex;
-    width: calc(100% - 4rem);
-    flex-direction: row;
-    top: 0.5rem;
-    left: 1rem;
-    flex-direction: row;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, .6);
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.8);
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 0.5rem;
+@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+  .backdrop-blur {
+    background-color: rgba(255, 255, 255, 0.5);
+    -webkit-backdrop-filter: blur(2em);
+    backdrop-filter: blur(2em);
+  }
+}
+
+body {
+  background-color: beige;
+  margin: 0;
+  padding: 0;
+}
+
+/* header */
+header {
+  position: absolute;
+  display: flex;
+  width: calc(100% - 4rem);
+  flex-direction: row;
+  top: 0.5rem;
+  left: 1rem;
+  flex-direction: row;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.6);
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
 }
 
 .search-bar-container {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
-.label-search-bar{
-    /* margin: auto; */
-    padding: 0.2rem;
-    font-weight: bold;
-    font-size: large;
-    color: black;
+.label-search-bar {
+  /* margin: auto; */
+  padding: 0.2rem;
+  font-weight: bold;
+  font-size: large;
+  color: black;
 }
 
 .input {
-    border-radius: 5px;
-    cursor: pointer;
-    color:  rgba(10, 10, 10, 0.7);
+  border-radius: 5px;
+  cursor: pointer;
+  color: rgba(10, 10, 10, 0.7);
 }
 
 .press-enter-note {
-    font-size: small;
+  font-size: small;
 }
 
 .select-temp {
-    position: absolute;
-    display: flex;
-    gap: 0.5rem;
-    margin: auto;
-    right: 1rem;
+  position: absolute;
+  display: flex;
+  gap: 0.5rem;
+  margin: auto;
+  right: 1rem;
 }
 
 .celsius,
 .fahrenheit {
-    font-size: large;
-    font-weight: 700;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 0.3rem;
+  font-size: large;
+  font-weight: 700;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.3rem;
 }
 
 .celsius:hover,
 .fahrenheit:hover {
-    background-color:  rgba(255, 255, 255, 0.5);
-} 
+  background-color: rgba(255, 255, 255, 0.5);
+}
 
 .celsius.selected,
 .fahrenheit.selected {
-    color:  rgba(10, 10, 10, 1);
-    border: 3px solid black; 
+  color: rgba(10, 10, 10, 1);
+  border: 3px solid black;
 }
 
- /* now panel */
- .now-container {
-     display: flex; 
-     flex-direction: column;
-     position: absolute;
-     left: 1rem;
-     top: 5rem;
-     background: rgba(255, 255, 255, .6);
-     -webkit-backdrop-filter: blur(10px);
-     backdrop-filter: blur(10px);
-     border-radius: 10px;
-     box-shadow: 20px 20px 50px rgba(0,0,0,0.8);
-     color: black;
-     font-size: large;
-     font-weight: bold; 
- 
- }
- 
- .now-city-name {
-     margin: 2rem;
-     margin-top: 1rem;
-     margin-bottom: 0rem;
- }
- 
- .now-description {
-     font-size: medium;
-     margin-top: 0rem;
-     margin-bottom: 1rem;
-     margin: auto;
- }
- 
- .now-icon-temp-container {
-     display: flex;
-     flex-direction: row;
-     margin: auto;
-     gap: 0.5rem;
- }
- 
- 
- 
- .now-icon-container {
-     /* border: 2px solid darkgrey; */
- }
-
- 
- .now.wi {
-    font-size: 4rem;
-    color: grey;
+/* now panel */
+.now-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 1rem;
+  top: 5rem;
+  background: rgba(255, 255, 255, 0.6);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
+  color: black;
+  font-size: large;
+  font-weight: bold;
 }
 
- .now-temperature {
-     display: flex;
-     font-size: 1.5rem;
-     margin: auto;
- }
- 
- /* .now-other-container{
+.now-city-name {
+  margin: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 0rem;
+}
+
+.now-description {
+  font-size: medium;
+  margin-top: 0rem;
+  margin-bottom: 1rem;
+  margin: auto;
+}
+
+.now-icon-temp-container {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  gap: 0.5rem;
+}
+
+.now-icon-container {
+  /* border: 2px solid darkgrey; */
+}
+
+.now.wi {
+  font-size: 4rem;
+  color: grey;
+}
+
+.now-temperature {
+  display: flex;
+  font-size: 1.5rem;
+  margin: auto;
+}
+
+/* .now-other-container{
      display: flex;
      flex-direction: column;
      margin-top: 1rem;
@@ -151,161 +148,154 @@
      margin-left: 2rem;
      gap: 0.5rem;
  } */
- 
- .now-other-container {
-     display: flex;
-     /* border: 2px solid black; */
-     gap: 1rem;
- }
- 
- .now-feels-like {
-     display: flex;
- }
- 
- .now-humidity {
-     display: flex;
- }
- 
- 
- /* hourly panel */
- .hourly-container {
-     /* display: flex;
+
+.now-other-container {
+  display: flex;
+  /* border: 2px solid black; */
+  gap: 1rem;
+}
+
+.now-feels-like {
+  display: flex;
+}
+
+.now-humidity {
+  display: flex;
+}
+
+/* hourly panel */
+.hourly-container {
+  /* display: flex;
      flex-direction: column; */
-     width: 90vw;
-     /* gap: 1rem; */
-     position: absolute;
-     margin-left: auto;
-     margin-right: auto;
-     left: 0;
-     right: 0;
-     bottom: 1rem;
-     background-color: rgba(255,255,255,0.1);
-     padding: 0.5rem;
-     border-radius: 10px;
-     box-shadow: 20px 20px 50px rgba(0,0,0,0.8);
-     border-top: 1px solid rgba(255,255,255,0.2);
-     border-left: 1px solid rgba(255,255,255,0.2);
-     background: rgba(255, 255, 255, .5);
- }
- 
+  width: 90vw;
+  /* gap: 1rem; */
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: 1rem;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 0.5rem;
+  border-radius: 10px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.5);
+}
 
- 
- .title-hourly {
-     display: flex;
-     color: black;
-     font-size: large;
-     font-weight: bold; 
-     margin-bottom: 0.75rem;
-     text-shadow: 0px 0px 2px;
- }
- 
- .data-hourly {
-     display: flex;
-     flex-direction: row;
-     gap: 1.5rem;
-     padding: 0.4rem;
-     color: black;
-     margin-right: 0.5rem;
-     overflow-x: scroll;
-     overflow-y: hidden;
-     white-space: nowrap;
-     font-size: large;
-     font-weight: bold; 
- 
- }
- 
- .h-container {
-     display: flex;
-     flex-direction: column;
-     gap: 0.5rem;
- }
- 
- .h-time {
- 
- }
- 
- .hour.wi {
- 
- }
- 
- .h-temp {
- 
- }
- 
- /* daily panel */
- .daily-container {
-    background-color: black;
-    color: white;
- }
+.title-hourly {
+  display: flex;
+  color: black;
+  font-size: large;
+  font-weight: bold;
+  margin-bottom: 0.75rem;
+  text-shadow: 0px 0px 2px;
+}
 
- .title-daily {
-    display: flex;
-    color:  rgb(209, 208, 208);
-    font-size: large;
-    font-weight: bold; 
-    margin-bottom: 1.5rem;
-    text-shadow: 0px 0px 2px;
-    letter-spacing: 1.5px;
- }
+.data-hourly {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+  padding: 0.4rem;
+  color: black;
+  margin-right: 0.5rem;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  font-size: large;
+  font-weight: bold;
+}
 
- .data-daily {
-     display: flex;
-     flex-direction: column;
-     gap: 1rem;
-     font-size: large;
-     font-weight: 600;
-     letter-spacing: 1.5px;
- }
- 
- .d-container {
-     display: flex;
-     flex-direction: row;
-     gap: 2rem;
- }
- .d-time {
-    width: 10rem;
- }
- .day.wi {
-    width: 2rem;
- }
- .d-description {
-    width: 15rem;
- }
- .d-tmin {
-    text-align: right;
-    width: 3rem;
- }
- .d-tmax {
-    text-align: right;
-    width: 3rem;
- }
- 
+.h-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.h-time {
+}
+
+.hour.wi {
+}
+
+.h-temp {
+}
+
+/* daily panel */
+.daily-container {
+  background-color: black;
+  color: white;
+}
+
+.title-daily {
+  display: flex;
+  color: rgb(209, 208, 208);
+  font-size: large;
+  font-weight: bold;
+  margin-bottom: 1.5rem;
+  text-shadow: 0px 0px 2px;
+  letter-spacing: 1.5px;
+}
+
+.data-daily {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: large;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+}
+
+.d-container {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+.d-time {
+  width: 10rem;
+}
+.day.wi {
+  width: 2rem;
+}
+.d-description {
+  width: 15rem;
+}
+.d-tmin {
+  text-align: right;
+  width: 3rem;
+}
+.d-tmax {
+  text-align: right;
+  width: 3rem;
+}
+
 .freepik-credit {
-    position: absolute; 
-    bottom: 0.1rem;
-    right: 0.1rem;
-    margin: 0.2rem;
-} 
+  position: absolute;
+  bottom: 0.1rem;
+  right: 0.1rem;
+  margin: 0.2rem;
+}
 
 .fixed-bg {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
-    width: 100%;
-    color: white;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("img/3930.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+  width: 100%;
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("img/3930.jpg");
 }
 
 .scroll-bg {
-    display: flex;  
-    flex-direction: column;
-    background-color: #0f0f0a;
-    padding: 2rem;
-    color: #8f8f8f;
-} 
+  display: flex;
+  flex-direction: column;
+  background-color: #0f0f0a;
+  padding: 2rem;
+  color: #8f8f8f;
+}
