--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,20 @@
     "Lucida Sans", Arial, sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
-  .backdrop-blur {
-    background-color: rgba(255, 255, 255, 0.5);
-    -webkit-backdrop-filter: blur(2em);
-    backdrop-filter: blur(2em);
+@supports ( (-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px)) ) {
+  header,
+  .now-container,
+  .hourly-container {
+    background-color: rgba(220, 220, 220, 0.7);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
+  }
+
+  .h-container {
+    background-color: rgba(220, 220, 220, 0.2);
   }
 }
 
@@ -43,7 +50,6 @@ header {
 }
 
 .label-search-bar {
-  /* margin: auto; */
   padding: 0.2rem;
   font-weight: bold;
   font-size: large;
@@ -53,11 +59,13 @@ header {
 .input {
   border-radius: 5px;
   cursor: pointer;
+  padding: 0.2rem;
   color: rgba(10, 10, 10, 0.7);
 }
 
 .press-enter-note {
   font-size: small;
+  margin: 0.1rem 0rem;
 }
 
 .select-temp {
@@ -75,6 +83,8 @@ header {
   border: 1px solid black;
   border-radius: 5px;
   padding: 0.3rem;
+  cursor: pointer;
+  color: rgba(10, 10, 10, 0.7);
 }
 
 .celsius:hover,
@@ -96,13 +106,13 @@ header {
   left: 1rem;
   top: 5rem;
   background: rgba(255, 255, 255, 0.6);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
   border-radius: 10px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
   color: black;
   font-size: large;
   font-weight: bold;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .now-city-name {
@@ -125,13 +135,10 @@ header {
   gap: 0.5rem;
 }
 
-.now-icon-container {
-  /* border: 2px solid darkgrey; */
-}
-
 .now.wi {
   font-size: 4rem;
   color: grey;
+  padding: 0.5rem;
 }
 
 .now-temperature {
@@ -140,19 +147,20 @@ header {
   margin: auto;
 }
 
-/* .now-other-container{
-     display: flex;
-     flex-direction: column;
-     margin-top: 1rem;
-     margin-bottom: 1.5rem;
-     margin-left: 2rem;
-     gap: 0.5rem;
- } */
-
 .now-other-container {
   display: flex;
-  /* border: 2px solid black; */
-  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  gap: 0.5rem;
+}
+
+.now-item-container {
+  display: flex;
+  gap: 0.5rem;
 }
 
 .now-feels-like {
@@ -165,23 +173,20 @@ header {
 
 /* hourly panel */
 .hourly-container {
-  /* display: flex;
-     flex-direction: column; */
   width: 90vw;
-  /* gap: 1rem; */
   position: absolute;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
-  bottom: 1rem;
+  bottom: 1.5rem;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 0.5rem;
   border-radius: 10px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   border-left: 1px solid rgba(255, 255, 255, 0.2);
-  background: rgba(255, 255, 255, 0.5);
+  background-color: rgba(220, 220, 220, 0.6);
 }
 
 .title-hourly {
@@ -196,6 +201,7 @@ header {
 .data-hourly {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   gap: 1.5rem;
   padding: 0.4rem;
   color: black;
@@ -210,22 +216,21 @@ header {
 .h-container {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.4rem;
+  padding: 0.1rem;
+  border-radius: 4px;
 }
 
-.h-time {
-}
-
-.hour.wi {
-}
-
+.h-time,
+.hour.wi,
 .h-temp {
+  display: flex;
+  margin: auto;
 }
 
 /* daily panel */
 .daily-container {
-  background-color: black;
-  color: white;
+  margin: auto;
 }
 
 .title-daily {
@@ -245,6 +250,8 @@ header {
   font-size: large;
   font-weight: 600;
   letter-spacing: 1.5px;
+  color: rgb(200, 200, 200);
+  background-color: rgb(10, 10, 10);
 }
 
 .d-container {
@@ -267,7 +274,7 @@ header {
 }
 .d-tmax {
   text-align: right;
-  width: 3rem;
+  width: 5rem;
 }
 
 .freepik-credit {
@@ -275,6 +282,9 @@ header {
   bottom: 0.1rem;
   right: 0.1rem;
   margin: 0.2rem;
+  text-decoration: none;
+  color: black;
+  background-color: rgba(210, 210, 210, 0.4);
 }
 
 .fixed-bg {
