--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  /* font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif; */
+  font-family: 'Noto Sans', sans-serif;    
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -36,11 +37,12 @@ header {
   left: 1rem;
   flex-direction: row;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.7);
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 0.5rem;
+  padding-top: 0.8rem;
+  padding-bottom: 0.3rem;
 }
 
 .search-bar-container {
@@ -52,7 +54,7 @@ header {
 .label-search-bar {
   padding: 0.2rem;
   font-weight: bold;
-  font-size: large;
+  font-size: x-large;
   color: black;
 }
 
@@ -64,7 +66,7 @@ header {
 }
 
 .press-enter-note {
-  font-size: small;
+  font-size: medium;
   margin: 0.1rem 0rem;
 }
 
@@ -78,7 +80,7 @@ header {
 
 .celsius,
 .fahrenheit {
-  font-size: large;
+  font-size: x-large;
   font-weight: 700;
   border: 1px solid black;
   border-radius: 5px;
@@ -104,25 +106,28 @@ header {
   flex-direction: column;
   position: absolute;
   left: 1rem;
-  top: 5rem;
-  background: rgba(255, 255, 255, 0.6);
+  top: 6rem;
+  background: rgba(255, 255, 255, 0.7);
   border-radius: 10px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
   color: black;
   font-size: large;
   font-weight: bold;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .now-city-name {
   margin: 2rem;
-  margin-top: 1rem;
-  margin-bottom: 0rem;
+  margin-top: 1.5rem;
+  margin-bottom: 0.25rem;
+  font-size: xx-large;
+  font-weight: 900;
 }
 
 .now-description {
-  font-size: medium;
+  font-weight: 500;
+  font-size: x-large;
   margin-top: 0rem;
   margin-bottom: 1rem;
   margin: auto;
@@ -136,14 +141,14 @@ header {
 }
 
 .now.wi {
-  font-size: 4rem;
+  font-size: 5rem;
   color: grey;
-  padding: 0.5rem;
+  padding: 0.8rem;
 }
 
 .now-temperature {
   display: flex;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin: auto;
 }
 
@@ -152,7 +157,7 @@ header {
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.8rem;
   margin-left: auto;
   margin-right: auto;
   gap: 0.5rem;
@@ -161,14 +166,20 @@ header {
 .now-item-container {
   display: flex;
   gap: 0.5rem;
+  font-size: x-large;
+  font-weight: 500;
 }
 
 .now-feels-like {
   display: flex;
+  font-size: x-large;
+  font-weight: 700;
 }
 
 .now-humidity {
   display: flex;
+  font-size: x-large;
+  font-weight: 700;
 }
 
 /* hourly panel */
@@ -180,29 +191,28 @@ header {
   left: 0;
   right: 0;
   bottom: 1.5rem;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.7);
   padding: 0.5rem;
   border-radius: 10px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   border-left: 1px solid rgba(255, 255, 255, 0.2);
-  background-color: rgba(220, 220, 220, 0.6);
 }
 
 .title-hourly {
   display: flex;
   color: black;
-  font-size: large;
-  font-weight: bold;
+  font-size: x-large;
+  font-weight: 700;
   margin-bottom: 0.75rem;
-  text-shadow: 0px 0px 2px;
+  margin-left: 0.5rem;
 }
 
 .data-hourly {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 1.5rem;
+  gap: 1.8rem;
   padding: 0.4rem;
   color: black;
   margin-right: 0.5rem;
@@ -216,8 +226,7 @@ header {
 .h-container {
   display: flex;
   flex-direction: column;
-  gap: 0.4rem;
-  padding: 0.1rem;
+  padding: 0.12rem;
   border-radius: 4px;
 }
 
@@ -226,6 +235,13 @@ header {
 .h-temp {
   display: flex;
   margin: auto;
+  letter-spacing: 1.1px;
+}
+
+.hour.wi {
+  font-size: 2rem;
+  margin-top: 0.3rem;
+  margin-bottom: 0.6rem;
 }
 
 /* daily panel */
@@ -236,10 +252,9 @@ header {
 .title-daily {
   display: flex;
   color: rgb(209, 208, 208);
-  font-size: large;
+  font-size: x-large;
   font-weight: bold;
   margin-bottom: 1.5rem;
-  text-shadow: 0px 0px 2px;
   letter-spacing: 1.5px;
 }
 
@@ -260,21 +275,46 @@ header {
   gap: 2rem;
 }
 .d-time {
+  display: flex;
   width: 10rem;
+  margin-top: auto;
+  margin-bottom: auto;
 }
+
 .day.wi {
-  width: 2rem;
-}
-.d-description {
-  width: 15rem;
-}
-.d-tmin {
-  text-align: right;
+  display: flex;
   width: 3rem;
+  font-size: 2rem;
+  margin-top: auto;
+  margin-bottom: auto;
 }
+
+.d-description {
+  display: flex;
+  width: 14rem;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.d-tmin {
+  display: flex;
+  text-align: right;
+  width: 3.5rem;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.d-to {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .d-tmax {
+  display: flex;
   text-align: right;
   width: 5rem;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .freepik-credit {
