--- a/src/index.css
+++ b/src/index.css
@@ -22,20 +22,21 @@
 }
 
 body {
-  background-color: beige;
+  /* background-color: beige; */
+  background-color: black;
   margin: 0;
   padding: 0;
 }
 
 /* header */
 header {
-  position: absolute;
+  /* position: absolute; */
+  margin: 1rem auto -1rem auto;
   display: flex;
-  width: calc(100% - 4rem);
+  width: calc(100% - 2rem);
   flex-direction: row;
-  top: 0.5rem;
-  left: 1rem;
-  flex-direction: row;
+  /* top: 0.5rem;
+  left: 1rem; */
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.7);
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
@@ -104,9 +105,10 @@ header {
 .now-container {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  left: 1rem;
-  top: 6rem;
+  justify-content: left;
+  /* position: absolute; */
+  margin-left: 1rem;
+  margin-top: 2rem;
   background: rgba(255, 255, 255, 0.7);
   border-radius: 10px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.8);
@@ -190,7 +192,7 @@ header {
   margin-right: auto;
   left: 0;
   right: 0;
-  bottom: 1.5rem;
+  bottom: 2rem;
   background-color: rgba(255, 255, 255, 0.7);
   padding: 0.5rem;
   border-radius: 10px;
@@ -247,6 +249,11 @@ header {
 /* daily panel */
 .daily-container {
   margin: auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
 }
 
 .title-daily {
@@ -256,6 +263,8 @@ header {
   font-weight: bold;
   margin-bottom: 1.5rem;
   letter-spacing: 1.5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .data-daily {
@@ -266,14 +275,20 @@ header {
   font-weight: 600;
   letter-spacing: 1.5px;
   color: rgb(200, 200, 200);
-  background-color: rgb(10, 10, 10);
+  background-color:  #0f0f0a;
+  width: 800px;
+  flex-wrap: wrap;
+  margin: auto;
 }
 
 .d-container {
   display: flex;
   flex-direction: row;
   gap: 2rem;
+  margin: auto;
 }
+
+
 .d-time {
   display: flex;
   width: 10rem;
@@ -318,27 +333,28 @@ header {
 }
 
 .freepik-credit {
-  position: absolute;
-  bottom: 0.1rem;
-  right: 0.1rem;
-  margin: 0.2rem;
+  display: none !important;
+  position: relative;
+  right: 1rem;
+  bottom: 0.8rem;
+  display: flex;
   text-decoration: none;
   color: black;
   background-color: rgba(210, 210, 210, 0.4);
+  justify-content:last baseline;
 }
 
 .fixed-bg {
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center center;
   height: 100vh;
   width: 100%;
   color: white;
   text-align: center;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-right: 1rem;
   background-image: url("img/3930.jpg");
 }
 
@@ -348,4 +364,31 @@ header {
   background-color: #0f0f0a;
   padding: 2rem;
   color: #8f8f8f;
+}
+
+@media (min-width: 1800px) {
+  body {
+    width: 1800px; 
+    margin: 0 auto !important; 
+  }
+
+  header {
+    display: flex;
+    width: calc(1800px - 4rem);
+    margin: 0 auto !important; 
+
+  }
+
+  .hourly-container {
+    width: calc(1800px - 4rem); 
+  }
+}
+
+@media (min-width: 500px) and (max-width: 850px) {
+  .d-container {
+    /* width: 100%; */
+    display: flex;
+    flex-direction: row;
+    /* gap: 2rem; */
+  }
 }
